# svxlink

./: INSTALL.adoc  SCHEDULER_COMPLETE_README.md  build.sh  scheduler_example.conf  scheduler_with_commands_example.conf  scheduler_with_placeholders_example.conf
bm/: EchoLink.tcl  ModuleEchoLink.conf  ReflectorLogic.tcl  svxlink.conf  svxlink.service
debian/: conffiles  postrm  preinst
examples/: db.conf
src/: CMakeLists.txt  versions
src/async/core/: AsyncConfig.cpp  AsyncConfig.h  AsyncConfigBackend.cpp  AsyncConfigBackend.h  AsyncConfigFactory.cpp  AsyncConfigFactory.h  AsyncConfigManager.cpp  AsyncConfigManager.h  AsyncConfigSource.cpp  AsyncConfigSource.h  AsyncFileConfigBackend.cpp  AsyncFileConfigBackend.h  AsyncMqttClient.cpp  AsyncMqttClient.h  AsyncMySQLConfigBackend.cpp  AsyncMySQLConfigBackend.h  AsyncPostgreSQLConfigBackend.cpp  AsyncPostgreSQLConfigBackend.h  AsyncSQLiteConfigBackend.cpp  AsyncSQLiteConfigBackend.h  CMakeLists.txt
src/async/demo/: AsyncConfigBackend_demo.cpp  AsyncConfig_demo.cpp  CMakeLists.txt
src/autopatch/: BrandMeisterBridge.cpp  BrandMeisterBridge.h  CMakeLists.txt  PatchCord.cpp  PatchCord.h
src/doc/man/: svxlink.conf.5
src/locationinfo/: AprsTcpClient.cpp
src/misc/: LogWriter.cpp
src/svxlink/: CMakeLists.txt  ChangeLog
src/svxlink/contrib/svxserver/: svxserver.cpp
src/svxlink/devcal/: devcal.cpp
src/svxlink/digital/: afsk_test.cpp
src/svxlink/modules/: CMakeLists.txt
src/svxlink/modules/chat_gpt/: CMakeLists.txt  ModuleChatGPT.conf  ModuleChatGPT.cpp  ModuleChatGPT.h  README.md  generate_sounds.sh
src/svxlink/modules/chat_gpt_old/: CMakeLists.txt  ModuleChatGPT.conf  ModuleChatGPT.cpp  ModuleChatGPT.h  README.old  events.tcl  generate_sounds.sh
src/svxlink/modules/echolink/: CMakeLists.txt  ModuleEchoLink.conf  ModuleEchoLink.conf.in  ModuleEchoLink.cpp  ModuleEchoLink.h
src/svxlink/modules/frn/: ModuleFrn.cpp  ModuleFrn.h
src/svxlink/modules/ptt_monitor/: CMakeLists.txt  ModulePttMonitor.conf  ModulePttMonitor.cpp  ModulePttMonitor.h  PttMonitor.tcl  help.txt
src/svxlink/modules/voice_ai/: AudioBuffer.cpp  AudioBuffer.h  CMakeLists.txt  IntentionProcessor.cpp  IntentionProcessor.h  ModuleVoiceAI.conf.template  ModuleVoiceAI.cpp  ModuleVoiceAI.h  ModuleVoiceAI_Simple.cpp  ModuleVoiceAI_Simple.h  PiperEngine.cpp  PiperEngine.h  README.md  WhisperEngine.cpp  WhisperEngine.h  install.sh  test_voice_ai.sh
src/svxlink/modules/voice_ai/cmake/Modules/: FindWhisperCpp.cmake
src/svxlink/player/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  SvxPlayer.cpp  SvxPlayer.h  svxplayer.conf.in  svxplayer.cpp
src/svxlink/reflector/: CMakeLists.txt  MqttHandler.cpp  MqttHandler.h  Reflector.cpp  Reflector.h  ReflectorClient.cpp  ReflectorClient.h  RemoteUserAuth.cpp  RemoteUserAuth.h  svxreflector-status  svxreflector.conf.in  svxreflector.cpp
src/svxlink/reflectorclient/: CMakeLists.txt  ReflectorClient.cpp  ReflectorClient.h
src/svxlink/remotetrx/: NetTrxAdapter.cpp  NetUplink.cpp  RfUplink.cpp  remotetrx.cpp
src/svxlink/siglevdetcal/: siglevdetcal.cpp
src/svxlink/svxlink/: CMakeLists.txt  Logic.cpp  Logic.h  LogicScheduler.cpp  LogicScheduler.h  Module.cpp  Module.h  ReflectorLogic.cpp  ReflectorLogic.h  ReflectorV2Logic.cpp  ReflectorV2Logic.h  RepeaterLogic.cpp  SimplexLogic.cpp  TOTPAuth.cpp  TOTPAuth.h  svxlink.conf.in  svxlink.cpp  svxlink_totp_config.cpp
src/svxlink/svxlink/contrib/: CMakeLists.txt  README.adoc
src/svxlink/svxlink/contrib/SipLogic/: README.adoc  SipLogic.cpp  SipLogic.h
src/svxlink/svxlink/contrib/TetraLogic/: README.adoc  TetraLib.h  TetraLogic.conf.5  TetraLogic.conf.in  TetraLogic.cpp  TetraLogic.h  TetraLogic.tcl  pei-init.json  svxlink.conf.in
src/svxlink/svxlink/contrib/UsrpLogic/: UsrpLogic.cpp
src/svxlink/svxwebbridge/: CMakeLists.txt  WebBridge.cpp  WebBridge.h  WsServer.cpp  WsServer.h  svxwebbridge.conf.in  svxwebbridge.cpp
src/svxlink/trx/: CMakeLists.txt  DtmfDecoder.cpp  DtmfDecoder.h  LocalRxBase.cpp  LocalRxBase.h  Ptt.cpp  PttGpiodV2.cpp  PttGpiodV2.h  Rx.h  Squelch.cpp  SquelchGpiodV1.cpp  SquelchGpiodV2.cpp  SquelchGpiodV2.h  SquelchPttId.cpp  SquelchPttId.h  SubAudioFskDecoder.cpp  SubAudioFskDecoder.h  Voter.cpp  Voter.h
tests/async/core/: AsyncConfigBackend_test.cpp
